# jnihook-pz

./: CMakeLists.txt
include/: jnihook.h
src/: classfile.cpp  classfile.hpp  jnihook.cpp  uuid.cpp
tests/: classfile_parse.cpp  jnihook_init_test.cpp  shutdown_test.cpp  test.cpp  uuid_test.cpp
tests/dummy/: HookTests.java  StaticArgTarget.java
